# winres

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  lib.rs
.changes/: btreemap.md  compile-for.md  compile_for.md  config.json  embed-resource-3.md  fix-parsing-toml.md  fix_unc.md  indexmap.md  initial-release.md  manifest-required.md  toml-0.9.md  toml08-msrv165.md  use-embed-resource.md  windows-0.61.md
.github/workflows/: ci.yml  covector-version-or-publish.yml
example/: Cargo.toml  build.rs
example/src/: main.rs
multi_binary_example/: Cargo.toml  build.rs
multi_binary_example/src/: lib.rs
src/: helpers.rs  lib.rs
tt/: resource.rc
