[package]
name = "tauri-winres"
description = "Create and set windows icons and metadata for executables"
version = "0.1.0"
authors = [
    "Tauri Programme within The Commons Conservancy",
    "Max Resch <resch.max@gmail.com>"
]
license = "MIT"
repository = "https://github.com/tauri-apps/winres"
documentation= "https://docs.rs/tauri-winres/"

[lib]
path = "lib.rs"

[dependencies]
toml = "0.5"
version_check = "0.9"

[dev-dependencies]
# used for tests
winapi = { version = "0.3", features = [ "winnt" ] }
