[package]
name = "tauri-winres"
description = "Create and set windows icons and metadata for executables"
version = "0.3.0"
authors = [
  "Tauri Programme within The Commons Conservancy",
  "Max Resch <resch.max@gmail.com>"
]
license = "MIT"
repository = "https://github.com/tauri-apps/winres"
documentation = "https://docs.rs/tauri-winres/"
rust-version = "1.65"

[dependencies]
toml = "0.8"
embed-resource = "3"

[dev-dependencies]
winapi = { version = "0.3", features = [ "winnt" ] }
