[package]
name = "winres-example"
description = "Example for winres"
version = "0.1.3"
authors = ["Max Resch <resch.max@gmail.com>"]
license = "MIT"
repository = "https://github.com/mxre/winres"
documentation = "https://mxre.github.io/winres"
build = "build.rs"
edition = "2021"
rust-version = "1.66"

[package.metadata.tauri-winres]
LegalCopyright = "Copyright © 2016-2017"
# this FileDescription overrides package.description
FileDescription = "Example for \"winres\""

[dependencies]
# matching embed-resource
windows-sys = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging"] }

# always use target build-dependencies for winres so that
# it won't get pulled for non-windows OSs (saves them resources)
[build-dependencies]
# winres project
tauri-winres = { path = ".." }
